vlib/v/checker/tests/modules/deprecated_module.out
vlib/v/checker/tests/modules/deprecated_module/main.v:5:1: notice: module `deprecated_module.www.ttt` will be deprecated after 2999-01-01, and will become an error after 2999-06-30; use xxx.yyy
    3 | // That is unrelated to what this file tests, but should be investigated further and fixed when the module lookup disrepancy is fixed.
    4 | import bbb.ccc
    5 | import www.ttt
      | ~~~~~~~~~~~~~~
    6 | import xxx.yyy
    7 | // vfmt on
vlib/v/checker/tests/modules/deprecated_module/main.v:16:11: error: undefined ident: `deprecated_module.www.ttt.non_existing`
   14 |     dump(ttt.f())
   15 |     dump(yyy.f())
   16 |     dump(ttt.non_existing)
      |              ~~~~~~~~~~~~
   17 | }
